user - solved navbar visibility issues
El navbar ahora esta mucho mas consistente

--- a/src/app/sharedComponents/navbar/navbar.component.css
+++ b/src/app/sharedComponents/navbar/navbar.component.css
@@ -22,7 +22,7 @@
 }
 
 img.rounded-circle {
-  height: 100%;
+  height: 80%;
 }
 
 
